--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,8 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
-.css-2s8ubb-MuiFormHelperText-root.Mui-error{
+.css-pyut0z-MuiFormHelperText-root.Mui-error{
   margin: 3px 0px 0px 0px!important;
 }
